# Snake

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: BitmapData.cpp  BitmapData.h  BitmapRenderer.cpp  BitmapRenderer.h  Event.h  Main.cpp  Primitives.h  Random.cpp  Random.h  Rectangle.cpp  Rectangle.h  Window.cpp  Window.h
